# document_cutter

./: .gitignore  CMakeLists.txt  DocManager.cpp  DocManager.hpp  File.cpp  File.hpp  FrameCorrector.cpp  FrameCorrector.hpp  README.md  main.cpp
